# sharepointconnect

./: LICENSE  README.md  setup.cfg
src/sharepointconnect/: connect.py
