[metadata]
name = sharepointconnect
version = 0.0.1
author = Michael Miller
author_email = None
description = a small library used to interact with sharepoint.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src